changed: wordpress - update version to 0.6.1 and remove maintenance mode for zero downtime deployments

--- a/charts/wordpress/Chart.yaml
+++ b/charts/wordpress/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wordpress
 description: "Using the official WordPress image. This chart provides automation for installation, user management, plugin installation, and metrics."
 type: application
-version: 0.6.0
+version: 0.6.1
 appVersion: "6.8.3"
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wordpress/app.png
 home: https://github.com/slydlake/helm-charts
@@ -26,10 +26,8 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
-    - kind: added
-      description: "Add configurable ports and secretKey to WordPress ServiceMonitor for flexible metrics scraping on HTTP/HTTPS endpoints. By default only HTTP port is scraped."
     - kind: changed
-      description: "When using WordPress metrics plugin, in init container always rewrite flush"
+      description: "Removed maintenance mode from init script to enable zero downtime deployments with multiple replicas"
   artifacthub.io/images: |
     - name: wordpress
       image: docker.io/wordpress:6.8.3-php8.1-apache
