changed: wordpress - update version to 0.6.7 Fixed race condition in multi-replica deployments causing plugin installation failures. Implemented database table-based distributed locking mechanism to ensure only one pod runs init operations at a time. Added a new sample

--- a/charts/wordpress/Chart.yaml
+++ b/charts/wordpress/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wordpress
 description: "Using the official WordPress image. This chart provides automation for installation, user management, plugin installation, and metrics."
 type: application
-version: 0.6.6
+version: 0.6.7
 appVersion: "6.8.3"
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wordpress/app.png
 home: https://github.com/slydlake/helm-charts
@@ -26,11 +26,10 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
-    - kind: changed
-      description: "Update docker.io/mariadb:12.0.2-noble to 607835c"
-      links:
-        - name: Pull Request
-          url: https://github.com/slydlake/helm-charts/pull/67
+    - kind: fixed
+      description: "Fixed race condition in multi-replica deployments causing plugin installation failures. Implemented database table-based distributed locking mechanism to ensure only one pod runs init operations at a time."
+    - kind: added
+      description: "Added a new sample values file: samples/advanced2.values.yaml with multiple replicas."
   artifacthub.io/images: |
     - name: wordpress
       image: docker.io/wordpress:6.8.3-php8.1-apache
