--- a/charts/wordpress/templates/configmap.yaml
+++ b/charts/wordpress/templates/configmap.yaml
@@ -220,6 +220,63 @@ data:
   init.sh: |
     #!/bin/bash
     echo "Starting init script..."
+    
+    # Use WordPress options table as distributed lock mechanism
+    # This works across all pods sharing the same database
+    MAX_WAIT=180
+    WAIT_TIME=0
+    CHECK_INTERVAL=5
+    
+    # Function to claim the lock using database table lock
+    # Create a lock entry in wp_options that persists across connections
+    claim_lock_db() {
+      CURRENT_TIME=$(date +%s)
+      POD_ID="$$-$(hostname)"
+      
+      # Try to insert lock row - will fail if already exists
+      wp db query "INSERT INTO wp_options (option_name, option_value, autoload) VALUES ('_helm_init_lock', '$POD_ID-$CURRENT_TIME', 'no') ON DUPLICATE KEY UPDATE option_id=option_id;" >/dev/null 2>&1
+      
+      # Check if we actually inserted (meaning we got the lock)
+      LOCK_OWNER=$(wp db query "SELECT option_value FROM wp_options WHERE option_name='_helm_init_lock';" --skip-column-names 2>/dev/null || echo "")
+      
+      if [[ "$LOCK_OWNER" == "$POD_ID-$CURRENT_TIME" ]]; then
+        return 0  # Lock acquired
+      fi
+      
+      # Check if lock is stale (older than 5 minutes)
+      # Extract timestamp (last field after last dash)
+      LOCK_TIME=$(echo "$LOCK_OWNER" | awk -F'-' '{print $NF}')
+      # Only check age if timestamp is numeric
+      if [[ "$LOCK_TIME" =~ ^[0-9]+$ ]]; then
+        LOCK_AGE=$((CURRENT_TIME - LOCK_TIME))
+        if [ $LOCK_AGE -gt 300 ]; then
+          # Stale lock detected, taking it over
+          echo "Found stale lock (${LOCK_AGE}s old), taking over..." >&2
+          wp db query "UPDATE wp_options SET option_value='$POD_ID-$CURRENT_TIME' WHERE option_name='_helm_init_lock';" >/dev/null 2>&1
+          return 0
+        fi
+      fi
+      
+      return 1  # Lock not acquired
+    }
+    
+    # Function to check if database lock is held
+    is_db_lock_held() {
+      LOCK_EXISTS=$(wp db query "SELECT COUNT(*) FROM wp_options WHERE option_name='_helm_init_lock';" --skip-column-names 2>/dev/null || echo "0")
+      if [ "$LOCK_EXISTS" -gt 0 ]; then
+        return 0  # Lock is held
+      fi
+      return 1  # Lock is free
+    }
+    
+    # Function to release the lock
+    release_lock() {
+      # Delete the lock row from wp_options
+      wp db query "DELETE FROM wp_options WHERE option_name='_helm_init_lock';" >/dev/null 2>&1 || true
+      echo "Lock released"
+    }
+    
+    trap release_lock EXIT
               
     # WP-CLI wrapper: always set path, and append --debug when DEBUG=true
     wp() {
@@ -263,8 +320,32 @@ data:
       else
         echo "WordPress is already installed, skipping installation."
       fi
+    fi
 
-      # set up localization
+    # NOW WordPress is definitely installed - acquire lock for remaining operations
+    echo "Acquiring lock for plugin/theme installation..."
+    LOCK_ATTEMPTS=0
+    while ! claim_lock_db; do
+        LOCK_ATTEMPTS=$((LOCK_ATTEMPTS + 1))
+        
+        if [ $WAIT_TIME -ge $MAX_WAIT ]; then
+          echo "Timeout waiting for database lock after ${MAX_WAIT}s"
+          echo "Checking if another pod has lock..."
+          if is_db_lock_held; then
+            echo "Another pod still holds lock, but taking over anyway..."
+          fi
+          break
+        fi
+        
+        echo "Another pod is currently running init process, waiting... (${WAIT_TIME}s/${MAX_WAIT}s)"
+        sleep $CHECK_INTERVAL
+        WAIT_TIME=$((WAIT_TIME + CHECK_INTERVAL))
+      done
+
+    echo "Database lock acquired, proceeding with initialization..."
+
+    # set up localization (only if WP_INIT is enabled)
+    if [ "${WP_INIT}" = "true" ]; then
       if [ -n "${WP_LOCALE}" ]; then
         # Set language if WordPress is already installed
         LANG_STATUS=$(wp language core list --language=${WP_LOCALE} --field=status)
@@ -280,17 +361,17 @@ data:
 
       # Set Wordpress permalinks
       echo "Setting WordPress permalinks..."
-      if [ ! -z "${WP_PERMALINK_STRUCTURE}" ]; then
+      if [ -n "${WP_PERMALINK_STRUCTURE}" ]; then
         wp rewrite structure "${WP_PERMALINK_STRUCTURE}"
         wp rewrite flush
       fi
 
       # Set user metadata
       echo "Setting user metadata..."
-      if [ ! -z "${WP_ADMIN_FIRSTNAME}" ]; then
+      if [ -n "${WP_ADMIN_FIRSTNAME}" ]; then
         wp user meta update "$WP_ADMIN_USER" first_name "$WP_ADMIN_FIRSTNAME"
       fi
-      if [ ! -z "${WP_ADMIN_LASTNAME}" ]; then
+      if [ -n "${WP_ADMIN_LASTNAME}" ]; then
         wp user meta update "$WP_ADMIN_USER" last_name "$WP_ADMIN_LASTNAME"
       fi
     fi
@@ -339,7 +420,7 @@ data:
     AUTOUPDATE_ENABLED=$(wp plugin list --fields=name,auto_update --format=csv 2>/dev/null | grep ",on$" | cut -d',' -f1 || echo "")
 
     # Handle WordPress metrics plugin if specified
-    if [ ! -z "${WORDPRESS_METRICS}" ]; then
+    if [ -n "${WORDPRESS_METRICS}" ]; then
       # Check if plugin is installed (using cached list)
       if echo "$INSTALLED_PLUGINS" | grep -q "^${WORDPRESS_METRICS}$"; then
         # Check if active (using cached list)
