--- a/charts/wireguard/templates/secrets.yaml
+++ b/charts/wireguard/templates/secrets.yaml
@@ -1,4 +1,11 @@
 {{- if and (empty .Values.wireguard.existingSecret) (.Values.wireguard.client.enabled) }}
+# Generate wg0.conf for client mode
+# If wireguard.client.config.existingSecret is set, lookup the keys and build the config
+# Otherwise, create a secret with empty values
+{{- $sourceSecret := "" }}
+{{- if .Values.wireguard.client.config.existingSecret }}
+{{- $sourceSecret = lookup "v1" "Secret" .Release.Namespace .Values.wireguard.client.config.existingSecret }}
+{{- end }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,17 +13,16 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     release: {{ include "wireguard.fullname" . }}
+  {{- if $sourceSecret }}
+  annotations:
+    # Hash of source secret to trigger regeneration on changes
+    checksum/source-secret: {{ $sourceSecret.data | toJson | sha256sum }}
+  {{- end }}
 type: Opaque
 stringData:
   wg0.conf: |
     [Interface]
-    {{- $secret := lookup "v1" "Secret" .Release.Namespace .Values.wireguard.client.config.existingSecret -}}
-    {{- if $secret }}
-    {{- $privatekey := default "" $secret.data.privatekey }}
-    PrivateKey = {{ $privatekey | b64dec }}
-    {{- else }}
-    PrivateKey = 
-    {{- end }}
+    PrivateKey = {{ if $sourceSecret }}{{ index $sourceSecret.data "privatekey" | b64dec }}{{ end }}
     Address = {{ .Values.wireguard.client.config.address }}
     DNS = {{- if .Values.wireguard.dns }} {{ .Values.wireguard.dns }} {{- else }} 1.1.1.1, 2606:4700:4700::1111 {{- end }}
     MTU = {{- if .Values.wireguard.client.config.mtu }} {{ .Values.wireguard.client.config.mtu }} {{- else }} 1420 {{- end }}
@@ -34,21 +40,9 @@ stringData:
     {{- end }}
 
     [Peer]
-    {{- $secret := lookup "v1" "Secret" .Release.Namespace .Values.wireguard.client.config.existingSecret -}}
-    {{- if $secret }}
-    {{- $publickey := default "" $secret.data.publickey }}
-      PublicKey = {{ $publickey | b64dec }}
-    {{- else }}
-      PublicKey = 
-    {{- end }}
-    {{- $secret := lookup "v1" "Secret" .Release.Namespace .Values.wireguard.client.config.existingSecret -}}
-    {{- if $secret }}
-    {{- $presharedkey := default "" $secret.data.presharedkey }}
-      PresharedKey = {{ $presharedkey | b64dec }}
-    {{- else }}
-      PresharedKey = 
-    {{- end }}
+    PublicKey = {{ if $sourceSecret }}{{ index $sourceSecret.data "publickey" | b64dec }}{{ end }}
+    PresharedKey = {{ if $sourceSecret }}{{ index $sourceSecret.data "presharedkey" | b64dec }}{{ end }}
     AllowedIPs = {{- if .Values.wireguard.allowedIPs }} {{ .Values.wireguard.allowedIPs }} {{- else }} 0.0.0.0/0, ::0/0 {{- end }}
     PersistentKeepAlive = {{- if .Values.wireguard.client.config.persistentKeepalive }} {{ .Values.wireguard.client.config.persistentKeepalive }} {{- else }} 25 {{- end }}
-    Endpoint =  {{ .Values.wireguard.client.config.endpoint }}
+    Endpoint = {{ .Values.wireguard.client.config.endpoint }}
 {{- end }}
