--- a/charts/wireguard/templates/deployment.yaml
+++ b/charts/wireguard/templates/deployment.yaml
@@ -17,10 +17,17 @@ spec:
   {{- end }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
       annotations:
+        {{- if and .Values.wireguard.client.enabled .Values.wireguard.client.config.existingSecret }}
+        {{- $secret := lookup "v1" "Secret" .Release.Namespace .Values.wireguard.client.config.existingSecret }}
+        {{- if $secret }}
+        # Hash of the secret data to trigger pod recreation when keys change
+        checksum/wg-keys: {{ $secret.data | toJson | sha256sum }}
+        {{- end }}
+        {{- end }}
+        {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
-      {{- end }}
+        {{- end }}
       labels:
         {{- include "wireguard.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
@@ -194,13 +201,16 @@ spec:
       volumes:
         - name: {{ include "wireguard.fullname" . }}
         {{- if .Values.wireguard.existingSecret }}
+          # Mount the existing secret with full wg0.conf
           secret:
             secretName: {{ .Values.wireguard.existingSecret }}
         {{- else }}
           {{- if .Values.wireguard.server.enabled }}
+          # Server mode uses PVC for config persistence
           persistentVolumeClaim:
             claimName: {{ if .Values.wireguard.server.storage.existingClaim }}{{ .Values.wireguard.server.storage.existingClaim }}{{ else }}{{ include "wireguard.fullname" . }}{{ end }}
           {{- else if .Values.wireguard.client.enabled }}
+          # Client mode: use generated secret with wg0.conf (built from existingSecret keys or placeholder)
           secret:
             secretName: {{ include "wireguard.fullname" . }}
           {{- end }}
